kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  selector:
    app: my-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080

# Explanation:

# apiVersion: Specifies the version of the Kubernetes API to use.
# kind: Specifies the type of Kubernetes resource, in this case, a Service.
# metadata: Contains metadata about the Service, such as its name.
# spec: Defines the specification of the Service.
# selector: Selects the set of pods to expose through the Service. In this example, pods with the label 
# app: my-app will be included.
# ports: Specifies the ports that the Service will listen on.
# protocol: Specifies the network protocol (TCP or UDP).
# port: Specifies the port on which the Service will listen.
# targetPort: Specifies the port on the pods to which traffic should be forwarded.

# In this example, the service named my-service will route traffic to pods labeled app: 
# my-app on port 8080 within the Kubernetes cluster. 
# Clients can access these pods via the service's IP address and port 80.
